--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jewe Pasch",
-  "license": "ISC"
+  "license": "ISC",
+  "repository" : "https://github.com/jachwe/facegif.git"
 }
